@@ -205,6 +205,21 @@ PHP_MINIT_FUNCTION(curl)
 	REGISTER_CURL_CONSTANT(CURLOPT_ENCODING);
 #endif
 		
+#if LIBCURL_VERSION_NUM > 0x070a05 /* CURLOPT_HTTPAUTH is available since curl 7.10.6 */
+ 	REGISTER_CURL_CONSTANT(CURLOPT_HTTPAUTH);
+ 	/* http authentication options */
+ 	REGISTER_CURL_CONSTANT(CURLAUTH_BASIC);
+ 	REGISTER_CURL_CONSTANT(CURLAUTH_DIGEST);
+ 	REGISTER_CURL_CONSTANT(CURLAUTH_GSSNEGOTIATE);
+ 	REGISTER_CURL_CONSTANT(CURLAUTH_NTLM);
+ 	REGISTER_CURL_CONSTANT(CURLAUTH_ANY);
+ 	REGISTER_CURL_CONSTANT(CURLAUTH_ANYSAFE);
+#endif
+
+#if LIBCURL_VERSION_NUM > 0x070a06 /* CURLOPT_PROXYAUTH is available since curl 7.10.7 */
+	REGISTER_CURL_CONSTANT(CURLOPT_PROXYAUTH);
+#endif
+
 	/* Constants effecting the way CURLOPT_CLOSEPOLICY works */
 	REGISTER_CURL_CONSTANT(CURLCLOSEPOLICY_LEAST_RECENTLY_USED);
 	REGISTER_CURL_CONSTANT(CURLCLOSEPOLICY_LEAST_TRAFFIC);
@@ -764,6 +779,12 @@ PHP_FUNCTION(curl_setopt)
 		case CURLOPT_HTTPGET:
 		case CURLOPT_HTTP_VERSION:
 		case CURLOPT_CRLF:
+#if LIBCURL_VERSION_NUM > 0x070a05 /* CURLOPT_HTTPAUTH is available since curl 7.10.6 */
+		case CURLOPT_HTTPAUTH:
+#endif
+#if LIBCURL_VERSION_NUM > 0x070a06 /* CURLOPT_PROXYAUTH is available since curl 7.10.7 */
+		case CURLOPT_PROXYAUTH:
+#endif
 			convert_to_long_ex(zvalue);
 			error = curl_easy_setopt(ch->cp, option, Z_LVAL_PP(zvalue));
 			break;
